[project]
name = "Hello_service"
version = "1.0.0"
description = "Simple hello world service"
authors = [
    {name = "Josef Pavlíček",email = "xpavlic6@mendelu.cz"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
