[project]
name = "Hello_service"
version = "1.0.0"
description = "Simple hello world service"
authors = [
    {name = "Josef Pavlíček",email = "xpavlic6@mendelu.cz"},
]
dependencies = [
    "fastapi>=0.103.2",
    "uvicorn[standard]>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start = "uvicorn main:app --reload"
test = "pytest"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
]
